Reworked Aequalis Scientia, has new functionality and improved Augments Added Eviction Pulse Augment for Expulsion Arrows Added Creative Item Groups Added Heavy Core transmutation Changed Quasar and Nebula tiles in Stardust Infusion Minigame Both Starlight Forge animations can now be played at an increased speed if shift is held while clicking the final button before the animation starts. Combining Stardust Infusion gear in a Twilight Anvil now gives better results. You can now view the Multiblock for items in their item page, and view a material list for them. Gave Tether Arrows a little extra boost to them.
Fixed a bug with the Aequalis Skill Point transmutation not consuming reagents
Fixed a bug where the Starlight Forge would not return stardust if cancelled in the ending animation
Fixed a bug with items not updating their sub-version properly
Fixed a bug where Running in the 90s can be acquired while swimming